Updated redirect url

--- a/myapp/templates/email_verified.html
+++ b/myapp/templates/email_verified.html
@@ -58,7 +58,7 @@
 
         <div className="text-center mt-4">
             <h1>Email verified successfully!</h1>
-            <button class="redirect-button" onclick="window.location.href='http://65.0.103.91/homepage';">Go to Home Page</button>
+            <button class="redirect-button" onclick="window.location.href='http://65.0.103.91/schemes';">Go to Home Page</button>
             
         </div>
     </div>
